--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cyberpunk card</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/09418235af.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div id="card">
+      <div class="hover" id="shade"></div>
+      <img src="./jzi6EF8yrnuJdRAQGmo5p6.jpg" alt="cyberpunk-edgerunners" />
+      <input class="hover" id="savebtn" type="button" value="Save">
+      <div id="btnbottom" class="hover">
+        <button id="search" class="btn" type="button">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          Cyberpun...
+        </button>
+        <button class="icon btn" type="button">
+          <i class="fa-solid fa-arrow-up-from-bracket"></i>
+        </button>
+        <button id="dots" class="icon btn" type="button">
+          <i class="fa-solid fa-ellipsis"></i>
+        </button>
+      </div>
+    </div>
+  </body>
 </html>
